# lambda-logging

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  serverless.yml
functions/: Cargo.toml
functions/src/: lib.rs
