[package]
name = "functions"
version = "0.1.0"
authors = ["Kanji Tanaka <ktanaka@ichain.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ship_logs"
path = "src/bin/ship_logs.rs"

[dependencies]
aws_lambda_events = "0.4"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
lambda_runtime = "0.3"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
simple_logger = "1.11"
tokio = { version = "1.5", features = ["macros"] }
